# knowledgeability-ai

./: .env.example  .gitignore  AGENT_HANDOFF.md  PORTABLE_SETUP.md  PRODUCTION_INGEST_REPORT.md  README.md  REPORT.md  TRADEOFFS.md  WHAT_WE_BUILT.md  eval_quality.py  export_graph.py  import_graph.py  ingest.py  mcp_server.py  mcp_server_stdio.py  progress.sh  pyproject.toml  query.py  test_mcp_server.py
.claude/: settings.json
